# Medhavi-Echelon

./: .gitignore  README.md  keywords.json  pattern_compiler.py
Layer 1/: keyword_dictionary.py  main.py  pattern_compiler.py  score_csv.py
client/: README.md  next.config.js  package-lock.json  package.json
data/: download_and_prepare_xtram1.py
layer 0/: control_plane.py
layer 1/: pattern_compiler.py
layer 2/: README.md  comparison_baseline.json  comparison_config3.json  eval_config3.py  eval_config4.py  failure_analysis.txt  fastmain.py  requirements_config3.txt  requirements_config4.txt  results_config3.json  results_config4.json  (+3 more)
server/: .env  CHAT_STORAGE_SYSTEM.md  LAYER0_INTEGRATION.md  QUICKSTART.md  README.md  SECURITY_IMPLEMENTATION.md  SETUP_CHAT_SYSTEM.md  migrate_db.py  pyproject.toml  test_layer0_integration.py  verify_installation.py
server/app/: main.py
server/app/api/: main.py
server/app/api/routes/: chat.py  two_factor.py
server/app/auth/: router.py  user.py
server/app/core/: config.py
server/app/core/database/: chat_crud.py  chat_schemas.py  database.py  user.py
server/app/core/email/: email.py
server/app/core/two_factor/: otp_utils.py
server/app/models/: ChatModel.py  UserModel.py  __init__.py
server/app/security/: README.md  __init__.py  config.py  diagram.py  example.py  intent.py  keyword_dictionary.py  keywords.json  layer0_control_plane.py  layer0_intent_layer.py  layer1_heuristic.py  layer2_ml.py  layer3_canary.py  models.py  pipeline.py  scoring.py
server/server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+12 files in other folders)
