[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi-mail>=1.6.1",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "fastapi[standard]>=0.128.0",
    "groq>=0.13.0",
    "psycopg2-binary>=2.9.11",
    "httpx>=0.27.0",
    "nltk>=3.9.2",
    "torch>=2.10.0",
    "transformers>=5.0.0",
]
